[FIX] Issue: Background color changes in the dark mode.

--- a/css/color-green-yellow.css
+++ b/css/color-green-yellow.css
@@ -5,6 +5,11 @@
   background: #adff2f;
 }
 
+@media screen and (prefers-color-scheme: dark) {
+  body {
+    background: #adff2f;
+  }
+}
 a, a:focus {
   color: #adff2f;
 }
